### 4.2.1
* BugFix on admin KlarnaConfiguration page in KP mode: Changes were not saved due to wrong cl parameter
* BugFix admin/GeneralSettings credentials, country select options fix
* BugFix klarna_express::resolveUser - wrong method called on user object
* support for older php versions improved
* fixed issue when general terms checkbox was active
* BugFix 0 payment price for oxid 4.9 and older

### 4.2.0
* Link BugFix for EE
* Design changes in the admin panel

### 4.1.0
* Added KP B2B feature
* Fixed issue about Amazon Payments integration

### 4.0.1
* Applied some changes to meet OXID module certification requirements

### 4.0.0
* Initial Release